package com.designing.bookmyshow.model;

public enum BookingStatus {
    CONFIRMED,EXPIRED,CREATED
}
