package com.designing.bookmyshow.model;

public class Customer extends Person{
    public Customer(Auth auth) {
        super(auth);
    }

    public void makeBooking(){
    }

    public void getBooking(){
    }
}
